--- a/MArvel_APP/Base.lproj/Main.storyboard
+++ b/MArvel_APP/Base.lproj/Main.storyboard
@@ -1,24 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Marvel Characters View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MarvelCharactersViewController" customModule="MArvel_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8vr-bo-ny8">
+                                <rect key="frame" x="10" y="44" width="394" height="56"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Zct-lZ-VOd">
+                                        <rect key="frame" x="0.0" y="0.0" width="336" height="56"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79F-8b-AgJ">
+                                        <rect key="frame" x="346" y="0.0" width="48" height="56"/>
+                                        <color key="tintColor" red="0.67979550691244239" green="0.25889190869242129" blue="0.26662044316027722" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Cancel"/>
+                                        <connections>
+                                            <action selector="ShowAndHideSearchBar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cL3-AE-2Bq"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5tX-6p-H20">
+                                <rect key="frame" x="155.5" y="44" width="248.5" height="62.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn-nav-marvel" translatesAutoresizingMaskIntoConstraints="NO" id="ceQ-dh-Bla">
+                                        <rect key="frame" x="0.0" y="17.5" width="91" height="28"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5P-1U-NBJ">
+                                        <rect key="frame" x="228.5" y="20.5" width="20" height="22"/>
+                                        <color key="tintColor" red="0.94466423990000004" green="0.36048498750000002" blue="0.35275667910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" image="magnifyingglass" catalog="system"/>
+                                        <connections>
+                                            <action selector="ShowAndHideSearchBar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SN7-ec-WVg"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MNh-8G-aGt">
+                                <rect key="frame" x="0.0" y="100" width="414" height="762"/>
+                                <color key="backgroundColor" red="0.25336023492197834" green="0.25336023492197834" blue="0.25336023492197834" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Pea-Vk-Jbf"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="rcp-OG-hNw"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8vr-bo-ny8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="2bY-dN-CRq"/>
+                            <constraint firstItem="8vr-bo-ny8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4xg-Ph-x4R"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8vr-bo-ny8" secondAttribute="trailing" constant="10" id="HYf-2C-LSK"/>
+                            <constraint firstItem="ceQ-dh-Bla" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.22" id="INg-Qv-Sca"/>
+                            <constraint firstItem="5tX-6p-H20" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="Sc3-ne-4oF"/>
+                            <constraint firstItem="5tX-6p-H20" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WId-pD-TCm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MNh-8G-aGt" secondAttribute="trailing" id="YRF-aB-v42"/>
+                            <constraint firstItem="5tX-6p-H20" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.07" id="Yog-Sh-WfO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MNh-8G-aGt" secondAttribute="bottom" id="c7D-9U-Pwc"/>
+                            <constraint firstItem="MNh-8G-aGt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eRt-aS-BZi"/>
+                            <constraint firstItem="MNh-8G-aGt" firstAttribute="top" secondItem="8vr-bo-ny8" secondAttribute="bottom" id="i6u-F3-JsG"/>
+                            <constraint firstItem="5tX-6p-H20" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-10" id="yAw-d4-T4P"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="iV6-3g-1HH"/>
+                    <connections>
+                        <outlet property="MainTableView" destination="MNh-8G-aGt" id="wFp-Kn-qQ7"/>
+                        <outlet property="mainStackView" destination="5tX-6p-H20" id="tXP-kz-YNW"/>
+                        <outlet property="searchBar" destination="Zct-lZ-VOd" id="ru3-0H-OuL"/>
+                        <outlet property="searchStackView" destination="8vr-bo-ny8" id="rpT-1I-jEF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="805.79710144927537" y="105.80357142857143"/>
+        </scene>
+        <!--Character Details View Controller-->
+        <scene sceneID="HC2-De-NwF">
+            <objects>
+                <viewController storyboardIdentifier="CharacterDetailsViewController" id="iuG-fz-AGK" customClass="CharacterDetailsViewController" customModule="MArvel_APP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b66-Vs-J2A">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bluringImage" translatesAutoresizingMaskIntoConstraints="NO" id="aRf-l9-R9n">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MmB-ii-Pwv">
+                                <rect key="frame" x="3" y="-40" width="408" height="936"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="iuG-fz-AGK" id="zWF-VF-y6n"/>
+                                    <outlet property="delegate" destination="iuG-fz-AGK" id="Ff9-3z-bR1"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.25336023489999998" green="0.25336023489999998" blue="0.25336023489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="MmB-ii-Pwv" secondAttribute="trailing" constant="3" id="GLc-e0-dz4"/>
+                            <constraint firstItem="MmB-ii-Pwv" firstAttribute="top" secondItem="b66-Vs-J2A" secondAttribute="top" constant="-40" id="Nva-7L-OdO"/>
+                            <constraint firstAttribute="bottom" secondItem="aRf-l9-R9n" secondAttribute="bottom" id="XDj-ha-oW4"/>
+                            <constraint firstAttribute="bottom" secondItem="MmB-ii-Pwv" secondAttribute="bottom" id="ZPd-8J-OCs"/>
+                            <constraint firstItem="aRf-l9-R9n" firstAttribute="top" secondItem="b66-Vs-J2A" secondAttribute="top" constant="44" id="cR1-Jr-WIk"/>
+                            <constraint firstItem="aRf-l9-R9n" firstAttribute="leading" secondItem="5Ih-69-FMs" secondAttribute="leading" id="jG6-I2-W9C"/>
+                            <constraint firstItem="aRf-l9-R9n" firstAttribute="trailing" secondItem="5Ih-69-FMs" secondAttribute="trailing" id="sPD-wO-yfT"/>
+                            <constraint firstItem="MmB-ii-Pwv" firstAttribute="leading" secondItem="5Ih-69-FMs" secondAttribute="leading" constant="3" id="x4a-p4-h1q"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Ih-69-FMs"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="aRf-l9-R9n"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="bzv-g7-xiU"/>
+                    <connections>
+                        <outlet property="MainTableView" destination="MmB-ii-Pwv" id="Gpy-GL-LkJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBN-wi-LRU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1610" y="106"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bluringImage" width="232" height="183"/>
+        <image name="icn-nav-marvel" width="62" height="28"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
