--- a/MArvel_APP/Base.lproj/Main.storyboard
+++ b/MArvel_APP/Base.lproj/Main.storyboard
@@ -86,6 +86,7 @@
                         <outlet property="mainStackView" destination="5tX-6p-H20" id="tXP-kz-YNW"/>
                         <outlet property="searchBar" destination="Zct-lZ-VOd" id="ru3-0H-OuL"/>
                         <outlet property="searchStackView" destination="8vr-bo-ny8" id="rpT-1I-jEF"/>
+                        <segue destination="iuG-fz-AGK" kind="show" identifier="CharacterDetailsViewController" id="p7A-Pr-hW7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -97,14 +98,14 @@
             <objects>
                 <viewController storyboardIdentifier="CharacterDetailsViewController" id="iuG-fz-AGK" customClass="CharacterDetailsViewController" customModule="MArvel_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="b66-Vs-J2A">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bluringImage" translatesAutoresizingMaskIntoConstraints="NO" id="aRf-l9-R9n">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MmB-ii-Pwv">
-                                <rect key="frame" x="3" y="-40" width="408" height="936"/>
+                                <rect key="frame" x="3" y="-40" width="408" height="882"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
